Implement lombok and optimize coding style